--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ import Card from "../components/Card.astro";
             <Card
               widthPercent="40%"
               width={800}
-              imgSrc={"/chatroom-t2.png"}
+              imgSrc={"https://i.imgur.com/RVuUGeu.png"}
               url={"https://chatroom-t2.herokuapp.com"}
               buttonText={"Open on Heroku"}
               title={"An end-of-trimester group project named Chatroom T2."}
@@ -30,7 +30,7 @@ import Card from "../components/Card.astro";
             <Card
               widthPercent="40%"
               width={800}
-              imgSrc={"/spiris-chats.png"}
+              imgSrc={"https://i.imgur.com/CGOnfxs.png"}
               url={"https://spiris-chats.herokuapp.com"}
               buttonText={"Open on Heroku"}
               title={"An end of year email-like chat service project originally written in PHP..."}
@@ -45,7 +45,7 @@ import Card from "../components/Card.astro";
             <Card
               widthPercent="40%"
               width={800}
-              imgSrc={"/scribefps.png"}
+              imgSrc={"https://i.imgur.com/eeMLQ6g.png"}
               url={"https://scribefps.netlify.app"}
               buttonText={"Open on Netlify"}
               title={"The Scribe official website, which includes a user-friendly admin page where someone with no technical skills can upload issues."}
@@ -55,7 +55,7 @@ import Card from "../components/Card.astro";
               widthPercent="40%"
               width={800}
               imgSrc={"/twitter-bot.png"}
-              url={"https://twitter.com/gothmoneybot"}
+              url={"https://i.imgur.com/C982MW1.png"}
               buttonText={"Open on Twitter"}
               title={"An automated Twitter bot I created to tweet lyrics every 6 hours from my favorite artists."}
               description={""}
@@ -63,7 +63,7 @@ import Card from "../components/Card.astro";
             <Card
               widthPercent="70%"
               width={1200}
-              imgSrc={"/my-google-wallet.png"}
+              imgSrc={"https://i.imgur.com/8d9Giuk.png"}
               url={""}
               buttonText={"Not yet live"}
               title={"My Google Wallet, a web app that creates a wallet for major blockchains from a user's Google account"}
@@ -78,7 +78,7 @@ import Card from "../components/Card.astro";
             <Card
               widthPercent="80%"
               width={1400}
-              imgSrc={"/defispot.png"}
+              imgSrc={"https://i.imgur.com/TWRWiM6.png"}
               url={"https://app.defispot.com"}
               buttonText={"Open on app.defispot.com"}
               title={"A decentralized exchange built on the THORChain protocol."}
