--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,8 +54,8 @@ import Card from "../components/Card.astro";
             <Card
               widthPercent="40%"
               width={800}
-              imgSrc={"/twitter-bot.png"}
-              url={"https://i.imgur.com/C982MW1.png"}
+              imgSrc={"https://i.imgur.com/C982MW1.png"}
+              url={"https://twitter.com/gothmoneybot"}
               buttonText={"Open on Twitter"}
               title={"An automated Twitter bot I created to tweet lyrics every 6 hours from my favorite artists."}
               description={""}
