testing different url

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ import { personal, work } from '../projects'
                   url,
                 }) => (
                   <Card
-                    imgSrc={`/${imgName}`}
+                    imgSrc={`/portfolio/${imgName}`}
                     className={className}
                     width={width}
                     buttonText={buttonText}
@@ -49,7 +49,7 @@ import { personal, work } from '../projects'
               work.map(
                 ({ imgName, width, buttonText, title, description, url }) => (
                   <Card
-                    imgSrc={`/${imgName}`}
+                    imgSrc={`/portfolio/${imgName}`}
                     className="max-w-[1000px]"
                     width={width}
                     buttonText={buttonText}
